Relicense under BSD3 for consistency

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,5 @@ DerivedData/
 .swiftpm/config/registries.json
 .swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
 .netrc
-.vscode
+.vscode/launch.json
 Bundle
